fixed images not showing

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -16,9 +16,9 @@ h1 {
     border-style: ridge;
 }
 
-.social_media {
+.social_ico {
     height: 20px;
-    width: 20px;
+    width: 20.5px;
 }
 
 @font-face {
